# flam-edge

./: .gitignore  AndroidManifest.xml  CMakeLists.txt  CameraManager.kt  MainActivity.kt  OpenCVProcessor.cpp  OpenCVProcessor.h  OpenGLRenderer.kt  README.md  activity_main.xml  architecture.md  local.properties  native-lib.cpp  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/vedanth/flamedge/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  OpenCVProcessor.cpp  OpenCVProcessor.h  native-lib.cpp
app/src/main/java/com/vedanth/flamedge/: CameraManager.kt  MainActivity.kt  OpenGLRenderer.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/vedanth/flamedge/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
opencv/: build.gradle
web/: index.html  package.json  tsconfig.json  webpack.config.js
web/src/: index.ts
